tests/paczka1/small_fuzzy/90997041.err
Error in line 1: iOgabIiO S50 62,5
Error in line 4: iOgabIiO A813 80,7
